Fix overlap between menu icon and title

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10,7 +10,7 @@ header, main {
 
 nav.top-nav {
 	box-shadow: none;
-	text-align: center;
+	padding-left: 132px;
 	margin-bottom: 20px;
 }
 
